force-app/main/default/objects/Form_Connection_Process__c/Form_Connection_Process__c.object-meta.xml
<CustomObject>
    <label>Clarity Form Connection Process</label>
    <nameField>
        <displayFormat>CFCP-{0000}</displayFormat>
        <label>Clarity Form Connection Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clarity Form Connection Process</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>