force-app/main/default/objects/Form_Connection_Process__c/fields/Form_Connection__c.field-meta.xml
<CustomField>
    <fullName>Form_Connection__c</fullName>
    <label>Clarity Form Connection</label>
    <referenceTo>Form_Connection__c</referenceTo>
    <relationshipLabel>Form Connection Process</relationshipLabel>
    <relationshipName>Form_Connection_Process</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>