force-app/main/default/objects/Form_Connection_Process__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>Clarity Form Response</label>
    <referenceTo>Response__c</referenceTo>
    <relationshipLabel>Form Connection Process</relationshipLabel>
    <relationshipName>Form_Connection_Process</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>