force-app/main/default/objects/Form_Connection_Process__c/fields/Salesforce_Connection_Object__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Connection_Object__c</fullName>
    <label>Salesforce Connection Object</label>
    <length>18</length>
    <type>Text</type>
</CustomField>